<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="mojaLista">Moja lista zakupów</string>
    <string name="dzielonaLista">Dzielona lista zakupów</string>
    <string name="listaSklepow">Lista sklepów</string>
    <string name="hello">Witaj!</string>
    <string name="moja_lista_produktow">Otwórz swoją listę</string>
    <string name="dzielona_lista_produktow">Otwórz współdzieloną listę</string>
    <string name="edytuj">Zapisz</string>
    <string name="usun">Usuń</string>
    <string name="kupiony">Kupiony?</string>
    <string name="liczba">Liczba</string>
    <string name="nazwa">Nazwa</string>
    <string name="cena">Cena</string>
    <string name="wyczysc">Wyczyść listę</string>
    <string name="dodaj">Dodaj</string>
    <string name="nowy_produkt">Nowy produkt:</string>
    <string name="akcje">Akcje</string>
    <string name="cancel">Anuluj</string>
    <string name="confirm">Wybierz</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="styl_tekstu">Styl tekstu</string>
    <string name="pogrubienie">Wytłuszczenie</string>
    <string name="kursywa">Kursywa</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="bold">bold</string>
    <string name="italics">italics</string>
    <string name="title_activity_maps">Mapa ulubionych sklepów</string>
    <string name="lista_sklepow">Otwórz listę sklepów</string>
    <string name="mapa_sklepow">Otwórz mapę ulubionych sklepów</string>
    <string name="promien">Promień (m)</string>
    <string name="wspolrzedne">Współrzędne (Lat,Long)</string>
    <string name="opis">Opis</string>
    <string name="dodajUlubione">Dodaj do ulubionych</string>
    <string name="nowy_sklep">Nowy sklep:</string>
    <string name="appwidget_text">Witaj!</string>
    <string name="add_widget">Add widget</string>
    <string name="action_show">com.example.helloworld.ACTION_SHOW</string>
    <string name="action_prev">com.example.helloworld.ACTION_PREV</string>
    <string name="action_next">com.example.helloworld.ACTION_NEXT</string>
    <string name="imageContDesc">Genshin Impact</string>
    <string name="web">WWW</string>
    <string name="img">Obrazy</string>
    <string name="sklepy">Sklepy</string>
    <string name="action_back">com.example.helloworld.ACTION_BACK</string>
    <string name="action_play">com.example.helloworld.ACTION_PLAY</string>
    <string name="action_pause">com.example.helloworld.ACTION_PAUSE</string>
    <string name="action_stop">com.example.helloworld.ACTION_STOP</string>
    <string name="action_skip">com.example.helloworld.ACTION_SKIP</string>
    <string name="action_shop">com.example.helloworld.ACTION_SHOP</string>
    <string name="broadcast_audio_player">com.example.helloworld.audioPlayer</string>
    <string name="done">Done!</string>
</resources>