<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:importantForAutofill="no">

    <EditText
        android:id="@+id/rv_Tv1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nazwa"/>

    <EditText
        android:id="@+id/rv_Tv2"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:hint="@string/cena"/>

    <EditText
        android:id="@+id/rv_Tv3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/liczba"
        android:inputType="numberSigned" />

    <CheckBox
        android:id="@+id/rv_Cb1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="10dp"

        android:text=""/>

    <Button
        android:id="@+id/rv_Bt1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/edytuj" />

    <Button
        android:id="@+id/rv_Bt2"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/usun" />

</LinearLayout>