<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="no"
    tools:context=".ListActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:paddingVertical="15dp"
            android:text="@string/nowy_produkt" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/nazwa"
            android:inputType="text" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/cena"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/liczba"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/dodaj" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:text="@string/wyczysc" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/td1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nazwa"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/td2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cena"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/td3"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/liczba"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/td4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kupiony"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/td5"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/akcje"
            android:textAlignment="center" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/rv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

</androidx.constraintlayout.widget.ConstraintLayout>