<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/appWidgetBackgroundColor"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.HelloWorld.AppWidgetContainer">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/appWidgetBackgroundColor"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textAlignment="center"
        android:textColor="?attr/appWidgetTextColor"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/wButtonWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web" />

    <Button
        android:id="@+id/wButtonImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/img" />

    <Button
        android:id="@+id/wButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

    <Button
        android:id="@+id/wButtonShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listaSklepow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/wImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/imageContDesc"
            app:srcCompat="@android:color/transparent" />

        <Button
            android:id="@+id/wButtonPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/wImageView"
            android:layout_marginVertical="100dp"
            android:background="@android:drawable/arrow_down_float"
            android:rotation="90"
            android:translationX="-25dp" />

        <Button
            android:id="@+id/wButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/wImageView"
            android:layout_marginVertical="100dp"
            android:background="@android:drawable/arrow_up_float"
            android:rotation="90"
            android:translationX="25dp" />
    </RelativeLayout>
</LinearLayout>