<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity"
    android:orientation="vertical"
    android:id="@+id/cL1"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/lL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/styl_tekstu"
            android:textAlignment="center"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lL1">

        <TextView
            android:id="@+id/settings1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pogrubienie"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/tB1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lL2">

        <TextView
            android:id="@+id/settings2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kursywa"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/tB2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>